# Vespucc.ai

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
api/: __init__.py  routes.py
client/: __init__.py  conversation.py  language_model.py  mcp_client.py
config/: __init__.py  settings.py
discord_bot/: README.md  __init__.py  bot.py  commands.py  events.py
mcp_servers/web3-research-mcp/: package-lock.json
models/: __init__.py  schemas.py
utils/: __init__.py  logger.py
